Selected changes from lindi2:proposed-misc-stuff
Windows network port

--- a/doc/triplane.6
+++ b/doc/triplane.6
@@ -52,6 +52,7 @@ controls:
 .IP "\(bu use X and W to steer the plane" 4
 .IP "\(bu use 1 to drop a bomb" 4
 .IP "\(bu use S to roll the plane upside down" 4
+.IP "\(bu use Pause or F4 to pause the game" 4
 .PP
 When you have destroyed all the targets try to land by releasing power
 and gliding to the runway.  Holding up and down simultaneously
