--- a/doc/triplane.6
+++ b/doc/triplane.6
@@ -15,16 +15,16 @@ to the original.
 .SH "OPTIONS"
 .PP
 .IP "\fB\-fullscreen\fP"
-Start the game in fullscreen mode (this is the default).
+Start the game in fullscreen mode.
 .IP "\fB\-nofullscreen\fP"
-Start the game in windowed mode.
+Start the game in windowed mode (this is the default).
 .IP "\fB\-nosound\fP"
 Start the game without sounds.  Note: This option also disables sounds
 in the configuration file so sounds will be disabled also the next
 time you start triplane.  To enable sounds set Physical
 Examination->Hearing->Sounds on in the game menus.
-.IP "\fB\-2, -3, -4\fP"
-Scale the 320x200-pixel game window 2x, 3x or 4x using software
+.IP "\fB\-1, -2, -3, -4\fP"
+Scale the 320x200-pixel game window 1x, 2x, 3x or 4x using software
 scaling.  This helps you play Triplane on displays that cannot switch to
 such low resolutions.
 .IP "\fB\-2svga\fP"
