--- a/doc/triplane.6
+++ b/doc/triplane.6
@@ -25,8 +25,7 @@ time you start triplane.  To enable sounds set Physical
 Examination->Hearing->Sounds on in the game menus.
 .IP "\fB\-1, -2, -3, -4\fP"
 Scale the 320x200-pixel game window 1x, 2x, 3x or 4x using software
-scaling.  This helps you play Triplane on displays that cannot switch to
-such low resolutions.
+scaling.
 .IP "\fB\-2svga\fP"
 Scale the 800x600-pixel window 2x using software scaling, to
 produce a 1600x1200-pixel window.  This resolution is used only in
