Mention Alt + Enter in doc

--- a/doc/triplane.6
+++ b/doc/triplane.6
@@ -15,7 +15,7 @@ to the original.
 .SH "OPTIONS"
 .PP
 .IP "\fB\-fullscreen\fP"
-Start the game in fullscreen mode.
+Start the game in fullscreen mode (can also be toggled with Alt + Enter).
 .IP "\fB\-nofullscreen\fP"
 Start the game in windowed mode (this is the default).
 .IP "\fB\-nosound\fP"
