Add "Fullscreen?" UI toggle to settings under VISION tab
-fullscreen and -nofullscreen options can be used to override config

--- a/doc/triplane.6
+++ b/doc/triplane.6
@@ -176,6 +176,9 @@ If deactivated, the bombed structures will not burn.
 .IP "Use 800*600 window (in MULTIPLAYER)?" 
 Activate this option to play multiplayer games in a 800*600 window.
 
+.IP "Fullscreen?"
+If acticated, game will be rendered in fullscreen.
+
 .PP
 \fBHEARING\fP
 
