Mention Suomipelit in doc

--- a/doc/triplane.6
+++ b/doc/triplane.6
@@ -402,3 +402,5 @@ original source by Timo Juhani Lindfors (timo.lindfors@iki.fi), Teemu
 J. Takanen (tjt@users.sourceforge.net), and Riku Saikkonen. We also thank
 Timo Lilja for his earlier Xlib porting efforts and Sami Liedes for
 spellchecking and optimization ideas.
+
+SDL2 porting was done by Suomipelit Organization.
